# confpoint

./: .gitignore  CHANGELOG.md  README.md  py2bin.ps1  py2exe.ps1  requirements.txt  setup.cfg  update_and_upload_test.ps1  update_and_upload_test.sh
src/confpoint/: image_tag.py  shareup.py  utils.py
src/confpoint/downloader/: __main__.py  onedownloader.py
src/confpoint/publisher/: __main__.py  push.py
src/confpoint/uploader/: __main__.py  oneloader.py
test_dir/: CHANGELOG_TST_1.MD  doc_with_image.md
