[metadata]
name = confpoint
version = attr: confpoint.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.xyz
description = Module for uploading MD file to the Confluence. Also alowed to uploading/downloading files to the SharePoint.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mcublog/confpoint
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    markdown == 3.3.6
    atlassian-python-api == 3.20.1
    shareplum == 0.5.1
    colorama == 0.4.4

[options.entry_points]
console_scripts =
    confpoint-publisher = confpoint.publisher.push:main
    confpoint-uploader = confpoint.uploader.oneloader:main
    confpoint-downloader = confpoint.downloader.onedownloader:main

[options.packages.find]
where = src